--- a/_config.yml
+++ b/_config.yml
@@ -26,6 +26,8 @@ email: salesforce@duelfersolutions.com
 #   Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
+show_excerpts: true
+excerpt_separator: .
 
 # Build settings
 theme: minima
