--- a/_config.yml
+++ b/_config.yml
@@ -33,6 +33,8 @@ excerpt_separator: .
 theme: minima
 plugins:
   - jekyll-feed
+  - jekyll-seo-tag
+  - jekyll-sitemap
 
 # Exclude from processing.
 # The following items will not be processed, by default.
