--- a/_config.yml
+++ b/_config.yml
@@ -36,6 +36,8 @@ plugins:
   - jekyll-seo-tag
   - jekyll-sitemap
 
+disqusname: duelfersolutions
+
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
